fix support on safari

--- a/src/components/ExportDialog.css
+++ b/src/components/ExportDialog.css
@@ -54,7 +54,7 @@
   padding-top: 22px;
 }
 .ExportActions__options > button {
-  margin: 2px;
+  margin: 4px;
 }
 .ExportDialog__scales .Stack_horizontal {
   margin-bottom: 0.25rem;
