--- a/src/components/ProjectName.css
+++ b/src/components/ProjectName.css
@@ -1,4 +1,4 @@
-.project-name {
+.ProjectName {
   display: flex;
   cursor: pointer;
   border: none;
